--- a/EMS.UI/Views/Shared/_Layout.cshtml
+++ b/EMS.UI/Views/Shared/_Layout.cshtml
@@ -178,7 +178,7 @@
                                     <li><a href="/EmployeeRegistration/EmployeeRegistration">Employee Registration</a></li>
                                     <li><a href="#">Company Registration</a></li>
                                     <li><a href="#">Contractor Registration</a></li>
-                                    <li><a href="#">Project Registration</a></li>
+                                    <li><a href="/ProjectRegistration/ProjectRegistration">Project Registration</a></li>
                                     <li><a href="#">Material Purchase Registration</a></li>
                                     <li><a href="#">Employee WorkSheet</a></li>
                                 </ul>
